@@ -24,17 +24,19 @@ public class Day08 {
 		List<LightSocket> lightSockets = input.stream().map(LightSocket::new).toList();
 
 		List<LightSocket.Distance> distances = lightSockets.stream()
-				.flatMap(a -> lightSockets.stream().filter(b -> a != b).map(b -> a.distance(b))).sorted()
-				.collect(Collectors.toList());
+				.flatMap(a -> lightSockets.stream().filter(b -> a != b).map(b -> a.distance(b)).distinct()).distinct().sorted()
+				.toList();
 
 		Map<LightSocket, Set<LightSocket>> chains = lightSockets.stream()
 				.collect(Collectors.toMap(ls -> ls, ls -> new HashSet<>(singletonList(ls))));
 
-		while (!distances.isEmpty()) {
-			LightSocket.Distance distance = distances.removeFirst();
+		System.out.println(distances.size());
+		int i = 0;
+		for (LightSocket.Distance distance : distances) {
+			Set<LightSocket> chainLeft = chains.get(distance.left);
+			Set<LightSocket> chainRight = chains.get(distance.right);
 
-			Set<LightSocket> chainLeft = chains.get(distance.left());
-			Set<LightSocket> chainRight = chains.get(distance.right());
+			//			System.out.println(++i + " => "+ distance);
 
 			if (chainLeft != chainRight) {
 				chainLeft.addAll(chainRight);
@@ -42,13 +44,12 @@ public class Day08 {
 					chains.replace(lightSocket, chainLeft);
 				}
 			}
-
-			distances.removeIf(o -> o.left() == distance.left() || o.right() == distance.left() && o.left() == distance.right());
 		}
 
 		List<Integer> list = chains.values().stream().distinct().map(Set::size).sorted(Collections.reverseOrder()).toList();
+		System.out.println(list);
 		if (list.size() >= 3) {
-			list.subList(0, 3).stream().reduce((l, s) -> l * s)
+			list.subList(0, 3).stream().reduce(Math::multiplyExact)
 					.ifPresent(s -> System.out.println("\u001B[31m8.1: " + s + "\u001B[0m"));
 		}
 	}
